--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+@import url('bootstrap/dist/css/bootstrap.min.css');
+@import url('font-awesome/css/font-awesome.min.css');
+@import url('@fortawesome/fontawesome-free/css/all.min.css');
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
